can upload images to firebase storage

--- a/app/src/main/res/layout/activity_add_new_entry.xml
+++ b/app/src/main/res/layout/activity_add_new_entry.xml
@@ -14,7 +14,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <EditText
-        android:id="@+id/titleText"
+        android:id="@+id/titleTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
