figured out glide

--- a/app/src/main/res/layout/activity_add_new_entry.xml
+++ b/app/src/main/res/layout/activity_add_new_entry.xml
@@ -45,4 +45,10 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:text="add entry" />
+
+    <ImageView
+        android:id="@+id/glideImageView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:srcCompat="@tools:sample/avatars" />
 </LinearLayout>
